--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGO_URL=mongodb+srv://root:gmUbyMjzVARBCn14@cluster0.yeykw.mongodb.net/
+MONGO_URL=mongodb+srv://root:gmUbyMjzVARBCn14@cluster0.yeykw.mongodb.net/hoidanit
