Create /login use local-strategy and /profile use jwt-strategy

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT=3000
 MONGO_URL=mongodb+srv://root:gmUbyMjzVARBCn14@cluster0.yeykw.mongodb.net/hoidanit
+
+JWT_ACCESS_SECRET=JUSTASECRET
+JWT_ACCESS_EXPIRE=1d
