--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 PORT=3000
 MONGO_URL=mongodb+srv://root:gmUbyMjzVARBCn14@cluster0.yeykw.mongodb.net/hoidanit
 
-JWT_ACCESS_SECRET=JUSTASECRET
-JWT_ACCESS_EXPIRE=1d
+JWT_ACCESS_TOKEN_SECRET=JUSTASECRET
+JWT_ACCESS_EXPIRE=30s
+
+JWT_REFRESH_TOKEN_SECRET=JUSTASECRET
+JWT_REFRESH_EXPIRE=1d
