--- a/.env
+++ b/.env
@@ -2,7 +2,15 @@ PORT=3000
 MONGO_URL=mongodb+srv://root:gmUbyMjzVARBCn14@cluster0.yeykw.mongodb.net/hoidanit
 
 JWT_ACCESS_TOKEN_SECRET=JUSTASECRET
-JWT_ACCESS_EXPIRE=30s
+JWT_ACCESS_EXPIRE=1000m
 
 JWT_REFRESH_TOKEN_SECRET=JUSTASECRET
 JWT_REFRESH_EXPIRE=1d
+
+SHOULD_INIT=true
+INIT_PASSWORD=123456
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_AUTH_USER=nguyenminhduc06072002@gmail.com
+EMAIL_AUTH_PASS=xtifyhxkbiecgamy
+EMAIL_PREVIEW=false
