refactor(core): optimize multiple files and improve configuration

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 PORT=3000
 MONGO_URL=mongodb+srv://root:gmUbyMjzVARBCn14@cluster0.yeykw.mongodb.net/hoidanit
 
+CORS_ORIGIN=true
+
 JWT_ACCESS_TOKEN_SECRET=JUSTASECRET
 JWT_ACCESS_EXPIRE=1000m
 
