--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nest-basic-hoidanit",
+  "name": "nestjs",
   "version": "0.0.1",
-  "description": "https://hoidanit.com.vn/",
+  "description": "description",
   "author": "Hỏi Dân IT",
   "private": true,
   "license": "UNLICENSED",
